# corp-llm-gateway

./: .editorconfig  .env.demo.example  .env.pilot.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.ru.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.gateway  NOTICE  README.md  README.ru.md  config.example.toml  docker-compose.demo.yml  docker-compose.pilot.yml  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: build-image.yml  ci.yml  dco.yml  release.yml
LEGAL/: CLA.md  COMMERCIAL-LICENSING.md  CONTRIBUTORS.md  COPYRIGHT.md  DEVELOPMENT-RECORD.md  IP-NOTICE.md  README.md
crt/: README.md
docker/: README.md
docker/corp-llm-mock/: Dockerfile  app.py
docker/demo-litellm/: Dockerfile  litellm-config.yaml
docker/demo-vector/: vector.yaml
docker/e2e/: Dockerfile
docker/langfuse-mock/: Dockerfile  app.py
docker/pilot-litellm/: Dockerfile
docker/pilot-nginx/: default.conf
docs/: architecture.excalidraw  architecture.md  architecture.ru.md  audit-schema.md  audit-schema.ru.md  conversation-id.md  conversation-id.ru.md  data-flow.puml  demo.md  demo.ru.md  extending.md  extending.ru.md  harness-integration.md  harness-integration.ru.md  pilot.md  pilot.ru.md  rbac-matrix.md  rbac-matrix.ru.md  replace-md-authoring.md  replace-md-authoring.ru.md  requirements-compliance.md  security.md  security.ru.md  x-corp-auth.md  x-corp-auth.ru.md
docs/adr/: ADR-001-interface-registry.md  ADR-003-ner-orchestration.md
docs/ops/: admin-cli.md  air-gapped.md  capacity.md  capacity.ru.md  configuration.md  install.md  profiles.md  release.md  runbook.md  runbook.ru.md  upgrade.md
examples/compose/: .env.example  README.md  docker-compose.yml  litellm-config.yaml
helm/corp-llm-gateway/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
scripts/: bench_local_first.py  demo-prompts.md  demo.sh  install.sh  pilot-prompts.md  pilot.sh
scripts/release/: cut-rc.sh  gates.sh  ship.sh
src/corp_llm_gateway/: _demo_guardrail.py  bootstrap.py  config.py  litellm_hook.py  settings.py
tests/: conftest.py  test_bootstrap.py  test_bootstrap_edges.py  test_config.py  test_litellm_hook.py  test_litellm_hook_adversarial.py  test_settings.py
tests/audit/: test_block_reason.py  test_factory.py  test_invariants.py  test_langfuse_sink.py  test_logger.py  test_profile_ids.py  test_retention.py
tests/auth/: test_factory_parity.py  test_providers.py  test_rbac.py
tests/cli/: test_admin.py  test_admin_rbac.py  test_admin_sanitize.py  test_proxy.py  test_status.py
tests/corp_llm/: test_client.py
tests/detectors/: test_detector_contract.py  test_dual_ner.py  test_dual_ner_require.py  test_ner_en.py  test_ner_ru.py  test_pii_detector_contract.py  test_regex_checksum.py  test_shadow.py
tests/e2e/: test_langfuse_pipeline.py  test_orchestrator_against_mock.py  test_proxy_pipeline.py
tests/extensions/: test_registry.py  test_registry_boundaries.py
tests/healthz/: test_checks.py  test_server.py
tests/helm/: test_chart_render.py
tests/invariants/: test_no_originals_leak.py
tests/metrics/: test_metrics.py
tests/payload/: test_classifier.py  test_compression.py  test_quota.py  test_size_threshold.py
tests/profiles/: test_bundle_lint.py  test_bundles.py  test_default_bundles_sealed.py  test_loader.py  test_manifest.py  test_policy.py  test_registry.py  test_resolver.py  test_signing.py
tests/providers/: test_registry.py
tests/rules/: test_cached.py  test_file_loader.py  test_gazetteer.py  test_parser.py
tests/sanitizer/: test_allowlist.py  test_content_blocks.py  test_dlp_guard.py  test_engine.py  test_latency_budget.py  test_local_first.py  test_oracle_trigger.py  test_orchestrator.py  (+8 more)
(+134 files in other folders)
