[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corp-llm-gateway"
version = "0.0.1"
description = "Corporate LLM gateway with sanitization guardrail (LiteLLM-based)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Corporate Internal", email = "the DRI@gmail.com" }]
dependencies = [
    "litellm>=1.40,<1.50",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "structlog>=24.1",
]

[project.scripts]
gateway-admin = "corp_llm_gateway.cli.admin:main"
corp-llm-gateway = "corp_llm_gateway.cli.status:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/corp_llm_gateway"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
