[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corp-llm-gateway"
version = "1.0.0"
description = "Corporate LLM gateway with sanitization guardrail (LiteLLM-based)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Artem Likhomanenko", email = "a.likhomanenko@gmail.com" }]
dependencies = [
    "litellm>=1.40,<2.0",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "structlog>=24.1",
]

[project.scripts]
gateway-admin = "corp_llm_gateway.cli.admin:main"
corp-llm-gateway = "corp_llm_gateway.cli.status:main"
corp-llm-gateway-proxy = "corp_llm_gateway.cli.proxy:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.23",
    "ruff==0.15.14",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
# Postgres token store backend. Keeps the default install lean.
postgres = ["asyncpg>=0.29"]
# JWT verification for RBAC enforcement (gateway-admin operator claims).
# [crypto] pulls `cryptography` — required: RBAC is pinned to RS256 (F11).
oidc = ["pyjwt[crypto]>=2.8"]
# Prometheus metrics exporter (serves /metrics). Optional — default exporter is
# noop, so the base install stays lean and emits nothing.
metrics = ["prometheus-client>=0.20"]
# CPU-only NER stack (torch-free). Install natasha + slovnet from PyPI.
# en_core_web_md is NOT on PyPI by package name — install via its wheel URL:
#   pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl
# or in uv: uv pip install <same URL> (uv lacks `python -m spacy download` pip access).
ner = [
    "natasha>=1.6",
    "slovnet>=0.6",
    "spacy>=3.8,<3.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/corp_llm_gateway"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

# prometheus-client is the optional [metrics] extra; keep mypy clean whether or
# not it is installed in the checking environment (lazy-imported at call sites).
[[tool.mypy.overrides]]
module = ["prometheus_client.*"]
ignore_missing_imports = true
